# graceful-DE2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build-gentoo.sh
data/: data.cmake  graceful-DE2.desktop
src/: CMakeLists.txt  gd-application.c  gd-application.h  gd-confirm-display-change-dialog.c  gd-confirm-display-change-dialog.h  gd-session.c  gd-session.h  gd-ui-scaling.c  gd-ui-scaling.h  gd-wm.c  gd-wm.h  main.c
src/backends/: gd-backend-private.h  gd-backend-x11-cm-private.h  gd-backend-x11-cm.c  gd-backend-x11-private.h  gd-backend-x11.c  gd-backend.c  gd-backend.h  gd-crtc-mode-info-private.h  gd-crtc-mode-info.c  gd-crtc-mode-private.h  gd-crtc-mode.c  gd-crtc-private.h  gd-crtc-xrandr-private.h  gd-crtc-xrandr.c  gd-crtc.c  gd-dbus-display-config.c  gd-dbus-display-config.h  gd-direction.h  gd-display-config-shared.h  gd-edid-parse.c  gd-edid-private.h  gd-gpu-private.h  gd-gpu-xrandr-private.h  gd-gpu-xrandr.c  gd-gpu.c  gd-logical-monitor-config-private.h  gd-logical-monitor-config.c  gd-logical-monitor-private.h  gd-logical-monitor.c  gd-monitor-config-manager-private.h  gd-monitor-config-manager.c  gd-monitor-config-private.h  gd-monitor-config-store-private.h  gd-monitor-config-store.c  gd-monitor-config-utils.c  gd-monitor-config-utils.h  gd-monitor-config.c  gd-monitor-manager-enums-private.h  gd-monitor-manager-kms-private.h  gd-monitor-manager-kms.c  (+32 more)
src/dbus/: org.freedesktop.FileManager1.xml  org.freedesktop.Notifications.xml  org.gnome.Nautilus.FileOperations2.xml  org.graceful.DE2.Introspect.xml  org.graceful.DE2.xml  org.graceful.Mutter.X11.xml  org.graceful.SessionManager.xml  org.graceful.SessionManager:ClientPrivate.xml  org.kde.StatusNotifierWatcher.xml
src/plugins/background/: gd-root-background.c  gd-root-background.h
src/plugins/common/: gd-bg.c  gd-bg.h  gd-common-enum-types.c  gd-common-enum-types.h  gd-keybindings.c  gd-keybindings.h  gd-popup-window.c  gd-popup-window.h
src/plugins/desktop/: gd-background.c  gd-background.h  gd-create-folder-dialog.c  gd-create-folder-dialog.h  gd-desktop-enum-types.c  gd-desktop-enum-types.h  gd-desktop-enums.h  gd-desktop-window.c  gd-desktop-window.h  gd-desktop.c  gd-desktop.h  gd-dummy-icon.c  gd-dummy-icon.h  gd-home-icon.c  gd-home-icon.h  gd-icon-view.c  gd-icon-view.h  gd-icon.c  gd-icon.h  gd-monitor-view.c  gd-monitor-view.h  gd-rename-popover.c  gd-rename-popover.h  gd-thumbnail-factory.c  gd-thumbnail-factory.h  gd-trash-icon.c  gd-trash-icon.h  gd-utils.c  gd-utils.h  gd-workarea-watcher.c  gd-workarea-watcher.h
src/plugins/notifications/: gd-bubble.c  gd-bubble.h  gd-notifications.c  gd-notifications.h  nd-daemon.c  nd-daemon.h  nd-notification-box.c  nd-notification-box.h  nd-notification.c  nd-notification.h  nd-queue.c  nd-queue.h  nd-stack.c  nd-stack.h
src/plugins/panel/: main-panel.c  main-panel.h
src/plugins/shell/: gd-label-window.c  gd-label-window.h  gd-osd-window.c  gd-osd-window.h  gd-shell-introspect.c  gd-shell-introspect.h  monitor-labeler.c  monitor-labeler.h  osd.c  osd.h  shell.c  shell.h
src/plugins/status-notify-watcher/: gd-sn-watcher-v0.c  gd-sn-watcher-v0.h  gd-status-notifier-watcher.c  gd-status-notifier-watcher.h
